# rgbrain-lab-visao-computacional

./: .gitignore  pyproject.toml
artigos/: yolo_o_inicio_da_jornada.md
src/dataset/rg_verso/20240522/: documentos-pessoais-rg-verso.yaml
src/dataset/rg_verso/20240522/result/: args.yaml  results.csv
src/dataset/rg_verso/20240522/test/: Thumbs.db
src/dataset/rg_verso/20240522/test/images/: Thumbs.db
src/dataset/rg_verso/20240522/test/labels/: 00026005_in.txt  00026085_in.txt  00026153_in.txt  00026280_in.txt  00026348_in.txt  00026401_in.txt  00026472_in.txt  00026529_in.txt  00026654_in.txt  00026795_in.txt  00026880_in.txt  00026930_in.txt  00027046_in.txt
src/dataset/rg_verso/20240522/train/images/: Thumbs.db
src/dataset/rg_verso/20240522/train/labels/: 000233025_in.txt  000233331_in.txt  000250000_in.txt  000250001_in.txt  000250002_in.txt  000252222_in.txt  000259281_in.txt  00027213_in.txt  00027232_in.txt  00027238_in.txt  00027285_in.txt  00027317_in.txt  00027390_in.txt  00027396_in.txt  00027397_in.txt  00027414_in.txt  00027471_in.txt  00027545_in.txt  00027632_in.txt  00027639_in.txt  00027643_in.txt  00027645_in.txt  00027671_in.txt  00027689_in.txt  00027720_in.txt  00027738_in.txt  00027765_in.txt  00027796_in.txt  00027930_in.txt  00027941_in.txt  00027948_in.txt  00027968_in.txt  00027990_in.txt  00028001_in.txt  00028066_in.txt  00028113_in.txt  00028165_in.txt  00028200_in.txt  00028213_in.txt  00028267_in.txt  (+30 more)
src/dataset/rg_verso/20240522/valid/labels/: 00026089_in.txt  (+16 more)
src/notebooks/: documentos_pessoais.ipynb  visao_computacional.ipynb
